feat: 添加删除活动接口
